--- a/custom.css
+++ b/custom.css
@@ -1,3 +1,33 @@
-body {
-        background-image: url(<img src="IMG_1312.JPG")
+
+
+/*-------------------------------------
+ carosel
+
+#mycarousel {
+    margin-top: 70px;
+    min-height: 300px;
+    min-width: 100%;
+}
+#mycarousel img {
+    min-height: 300px;
+    min-width: 100%;
+}
+#mycarousel > .carousel-indicators > li {
+    border-radius: 0px;
+    min-width: 25px;
+    background-color: #9d9d9d;
+    border: 1px solid black;
+    margin-right: 10px;;
+    margin-left: 10px;;
+}
+#mycarousel > .carousel-indicators > .active {
+    background-color: orange;
+}
+#mycarousel .carousel-caption {
+    color: black;
+    right: 58%;
+    text-align: center;
+    max-width: 500px;
+    left: auto;
+    top: auto;
 }
